Actions
Bug #12788
closedfix tst.include.ksh for ddi_ufm.h
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
dtrace can't parse trailing commas, so the test fails with this new header
Updated by John Levon almost 2 years ago
I ran the failing dtrace tst.include.ksh and checked it passed
Updated by Electric Monk almost 2 years ago
- Status changed from New to Closed
- % Done changed from 0 to 100
git commit c9ad389f76487048d6fde034960b0f5edfb778d7
commit c9ad389f76487048d6fde034960b0f5edfb778d7 Author: John Levon <john.levon@joyent.com> Date: 2020-05-27T15:52:43.000Z 12788 fix tst.include.ksh for ddi_ufm.h Reviewed by: Robert Mustacchi <rm@fingolfin.org> Approved by: Dan McDonald <danmcd@joyent.com>
Actions