12788 fix tst.include.ksh for ddi_ufm.h Reviewed by: Robert Mustacchi <rm@fingolfin.org> Approved by: Dan McDonald <danmcd@joyent.com>